--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+* {
+  text-decoration: none;
+}
 body {
+  background-image: url("https://wallpaperaccess.com/full/766185.jpg");
+  background-size: cover;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+.sidebar-container {
+  position: fixed;
+
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 400px !important;
+  background-color: rgba(255, 255, 255, 0.8);
+  overflow-y: auto;
+  z-index: 1000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.sidebar {
+  padding: 20px;
+}
+
+.sidebar a {
+  color: black !important;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 40px;
+  display: block;
+  text-decoration: none;
+}
+
+.sidebar a:hover {
+  font-size: 38px;
+  transition: font-size 0.3s ease;
+}
+
+.container {
+  margin-top: 15%;
+  margin-left: 40%;
+}
+.container-list {
+  margin-left: 500px;
+  display: inline-block;
 }
